Changed the height of the tweet content in tweets.css (article.tweet p) to be auto instead of fixed so that content does not overflow.

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -81,14 +81,14 @@
 .container #allTweets article.tweet p {
   display: flex;
   width: 100%;
-  height: 85px;
+  height: auto;
   border-bottom: solid;
   margin-top: 0px;
   margin-bottom: 0px;
   padding-top: 20px;
   padding-right: 10px;
   padding-left: 10px;
-  padding-bottom: 0px; /* 15px */
+  padding-bottom: 10px;
   font-weight: 600;
   word-break: break-word;
 }
